--- a/ruqqus/templates/settings_security.html
+++ b/ruqqus/templates/settings_security.html
@@ -74,7 +74,7 @@
 
                                     <div class="d-lg-flex">
 
-                                        <label for="new_password" class="w-lg-25">New Password</label>
+                                        <label for="new_password" class="mb-0 w-lg-25">New Password</label>
 
                                         <input class="form-control w-lg-75" id="new_password"
                                             aria-describedby="new_password" type="password" name="new_password"
@@ -91,9 +91,9 @@
 
                                     </div>
 
-                                    <div class="d-lg-flex">
+                                    <div class="d-lg-flex mt-3">
 
-                                        <label for="cnf_password" class="mt-3 w-lg-25">Confirm New Password</label>
+                                        <label for="cnf_password" class="mb-0 w-lg-25">Confirm New Password</label>
 
                                         <input class="form-control w-lg-75" id="cnf_password"
                                             aria-describedby="cnf_password" type="password" name="cnf_password"
@@ -108,9 +108,9 @@
 
                                     </div>
 
-                                    <div class="d-lg-flex">
+                                    <div class="d-lg-flex mt-5">
 
-                                        <label for="old_password" class="mt-3 w-lg-25">Old Password</label>
+                                        <label for="old_password" class="mb-0 w-lg-25">Old Password</label>
 
                                         <input class="form-control mb-2 w-lg-75" id="old_password"
                                             aria-describedby="old_password" type="password" name="old_password"
@@ -155,13 +155,13 @@
 
                                         <div class="w-lg-75">
 
-                                        <input autocomplete="new-password" class="form-control" id="new_email" placeholder="{{ v.email }}"
+                                        <input class="form-control" id="new_email" placeholder="{{ v.email }}"
                                             aria-describedby="new_email" type="email" name="new_email" required>
                                             {% if not v.is_activated %}
                                             <div class="text-danger text-small-extra mt-1" id="email-verify-text">Email not verified. <u><a href="javascript:void(0)" onclick="post('/api/verify_email');emailVerifyText();" class="text-danger">Verify now.</a></u></div>
                                             {% endif %}
 
-                                        </div>
+                                    </div>
 
                                     </div>
 
