--- a/ruqqus/templates/settings_security.html
+++ b/ruqqus/templates/settings_security.html
@@ -165,9 +165,9 @@
 
                                     </div>
 
-                                    <div class="d-lg-flex">
+                                    <div class="d-lg-flex mt-3">
 
-					<label for="email-password" class="mt-3 w-lg-25 d-none" id="email-password-label">Password</label>
+					<label for="email-password" class="w-lg-25 d-none" id="email-password-label">Password</label>
 
                     <div class="w-lg-75">
 
