--- a/ruqqus/templates/settings.html
+++ b/ruqqus/templates/settings.html
@@ -57,6 +57,10 @@ function formkey() {
 <script src="/assets/js/change_email.js"></script>
 <script src="/assets/js/email_verify_text.js"></script>
 
+<!-- Initialize BS 4 tool tips -->
+
+<script src="/assets/js/tooltips.js"></script>
+
 </body>
 
 </html>
