--- a/ruqqus/templates/single_comment.html
+++ b/ruqqus/templates/single_comment.html
@@ -62,7 +62,7 @@
                       </a>
 
                       <div class="dropdown-menu border-0 shadow" aria-labelledby="dropdownMoreLink">
-                        <a class="dropdown-item d-inline-block d-md-none" href="javascript:void(0);" role="button" class="copy-link" data-clipboard-text="https://www.ruqqus.com{{ c.permalink }}"><i class="fas fa-link"></i><span>Share</span></a>
+                        <a class="dropdown-item copy-link d-inline-block d-md-none" href="javascript:void(0);" role="button" data-clipboard-text="https://www.ruqqus.com{{ c.permalink }}"><i class="fas fa-link"></i><span>Share</span></a>
                         <a class="dropdown-item" href="{{ c.parent.permalink }}"><i class="fas fa-dna"></i>Parent</a>
                         <a class="dropdown-item" href="#"><i class="fas fa-save"></i>Save</a>
                         <a class="dropdown-item" href="#"><i class="fas fa-flag"></i>Flag</a>
