--- a/ruqqus/templates/userpage.html
+++ b/ruqqus/templates/userpage.html
@@ -83,7 +83,7 @@
   <hr>
   {% endif %}
   <div class="text-muted text-small-extra"><i class="fas fa-medal mr-2"></i>{{ u.karma }} Rep</div>
-  <div class="text-muted text-small-extra mt-2"><i class="fas fa-pen text-muted mr-2"></i>{{ u.post_count }} Post{{ 's' if u.post_count!=1 else '' }}
+  <div class="text-muted text-small-extra mt-2"><i class="fas fa-feather-alt text-muted mr-2"></i>{{ u.post_count }} Post{{ 's' if u.post_count!=1 else '' }}
   </div>
   <div class="text-muted text-small-extra mt-2"><i class="fas fa-birthday-cake text-muted mr-2"></i>User
     since {{ u.created_date }}
