added reponsive display classes to footer

--- a/ruqqus/templates/footer.html
+++ b/ruqqus/templates/footer.html
@@ -1,5 +1,5 @@
 
-    <footer class="footer py-5">
+    <footer class="footer py-5 d-none d-md-block">
     <div class="container-fluid">
       <div class="row justify-content-center">
         <div class="col">
