--- a/ruqqus/templates/submit.html
+++ b/ruqqus/templates/submit.html
@@ -178,35 +178,8 @@
 
         </div>
 
-            <footer class="footer py-5">
-    <div class="container-fluid">
-      <div class="row justify-content-center">
-        <div class="col">
-          <ul class="list-inline text-center text-small text-muted font-weight-bold mb-0">
-            <li class="list-inline-item"><a href="/about">About</a></li>
-            <li class="list-inline-item"><a href="#">Contact</a></li>
-            <li class="list-inline-item"><a href="/terms">Terms</a></li>
-            <li class="list-inline-item"><a href="#">Privacy Policy</a></li>
-            <li class="list-inline-item"><a href="#">Donate</a></li>
-            <li class="list-inline-item"><a href="#">Press</a></li>
-            <li class="list-inline-item"><a href="#">Help</a></li>
-            <li class="list-inline-item"><a href="https://www.twitter.com/ruqqus">Twitter</a></li>
-            <li class="list-inline-item"><a href="https://ruqqus.org/contribute">Github</a></li>
-            <li class="list-inline-item">&copy; 2019 Ruqqus</li>
-          </ul>
-        </div>
-  </footer>
-
-    <!-- Bootstrap core JavaScript -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-        crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-        crossorigin="anonymous"></script>
+{% include "footer.html" %}
+{% include "bootstrap.html" %}
 
 <!-- Initialize BS 4 tool tips -->
 
