--- a/ruqqus/templates/submission.html
+++ b/ruqqus/templates/submission.html
@@ -88,7 +88,7 @@
                     <div class="dropdown-menu border-0 shadow dropdown-menu-right dropdown-menu-lg-left mt-2"
                     aria-labelledby="dropdownMoreLink">
                     <a href="javascript:void(0);" role="button" class="dropdown-item copy-link" data-clipboard-text="https://www.ruqqus.com{{ p.permalink }}"><i class="fas fa-link"></i>Copy link</a>
-                    <a class="dropdown-item" href="#"><i class="fas fa-save"></i>Save</a>
+                    <a class="dropdown-item d-none" href="#"><i class="fas fa-save"></i>Save</a>
                     <a class="dropdown-item" href="#"><i class="fas fa-flag"></i>Flag</a>
                     {% if v %}
                     {% if v.admin_level >=1 %}
@@ -212,7 +212,7 @@
                   </a>
 
                   <div class="dropdown-menu border-0 shadow" aria-labelledby="dropdownMoreLink">
-                    <a class="dropdown-item" href="#"><i class="fas fa-save"></i>Save</a>
+                    <a class="dropdown-item d-none" href="#"><i class="fas fa-save"></i>Save</a>
                     <a class="dropdown-item" href="#"><i class="fas fa-flag"></i>Flag</a>
                     {% if v %}
                     {% if v.admin_level >=1 %}
