--- a/ruqqus/templates/userpage.html
+++ b/ruqqus/templates/userpage.html
@@ -200,11 +200,11 @@
       {% if u.admin_level>=3 %}<i class="fad fa-badge-check text-primary ml-1" data-toggle="tooltip" data-placement="bottom" title="Admin"></i>{% endif %}
       {% if u.real_id %}<span class="badge badge-pill text-white badge-info">{{ u.real_id }}</span>{% endif %}
     </span>
-    {% if u.bio_html|length < 1 %}
-    {% else %}
+    {% if u.bio_html %}
     <p class="text-muted text-small px-3">
       {{ u.bio_html | safe }}
     </p>
+    {% else %}
     {% endif %}
     <div class="profile-actions d-inline-block">
       {% if v and v.id != u.id %}
