--- a/ruqqus/templates/userpage.html
+++ b/ruqqus/templates/userpage.html
@@ -209,7 +209,7 @@
     <div class="profile-actions d-inline-block">
       {% if v and v.id != u.id %}
       <!-- Modal -->
-      <i class="fas fa-ellipsis-h" data-toggle="modal" data-target="#profileModal"></i>
+      <i class="fas fa-ellipsis-h ml-2" data-toggle="modal" data-target="#profileModal"></i>
 
       <div class="modal fade" id="profileModal" tabindex="-1" role="dialog" aria-labelledby="Profile Actions" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered" role="document">
