mobile post/comment actoins modal

--- a/ruqqus/templates/default.html
+++ b/ruqqus/templates/default.html
@@ -186,6 +186,9 @@
   </div>
 </div>
 
+{% block actionsModal %}
+{% endblock %}
+
 <footer class="footer py-5 d-none d-md-block">
   <div class="container-fluid">
     <div class="row justify-content-center">
