--- a/ruqqus/templates/single_comment.html
+++ b/ruqqus/templates/single_comment.html
@@ -52,9 +52,7 @@
                     {% endif %}
                     <li class="list-inline-item text-muted d-none d-md-inline-block"><a href="javascript:void(0);" role="button" class="copy-link" data-clipboard-text="https://www.ruqqus.com{{ c.permalink }}"><i class="fas fa-link"></i><span>Copy link</span></a>
                     </li>
-                    <li class="list-inline-item text-muted d-none"><a href="{{ c.parent.permalink }}"><span class="save"><i class="fas fa-dna"></i>Parent</span></a>
-                    </li>
-                    <li class="list-inline-item">
+                    <li class="list-inline-item d-none d-md-inline-block">
                         <div class="dropdown show">
                           <a href="#" role="button" id="dropdownMoreLink" data-toggle="dropdown" aria-haspopup="true"
                           aria-expanded="false">
@@ -71,7 +69,7 @@
                         {% if c.distinguish_level %}
 
                         <div class="dropdown-divider"></div>
-                        <h6 class="dropdown-header">Mod actions</h6>
+                        <h6 class="dropdown-header">Admin actions</h6>
 
                         <a class="dropdown-item" id="distinguish-{{ c.base36id }}" href="javascript:void(0)" onclick="undistinguish{% if v.admin_level>=4 %}Admin{% else %}Mod{% endif %}Comment('{{ c.base36id }}')"><i class="fas fa-id-badge"></i>Undistinguish</a>
                         {% else %}
@@ -83,13 +81,16 @@
                         {% if not c.is_banned %}
                         <a class="dropdown-item removeDropdownItem" id="moderate-{{ c.base36id }}" href="javascript:void(0)" onclick="removeComment('{{ c.base36id }}')"><i class="fas fa-trash-alt"></i>Remove</a>
                         {% else %}
-                        <a lass="dropdown-item approveDropdownItem" id="moderate-{{ c.base36id }}" href="javascript:void(0)" onclick="approveComment('{{ c.base36id }}')"><i class="fas fa-clipboard-check"></i>Approve</a>
+                        <a class="dropdown-item approveDropdownItem" id="moderate-{{ c.base36id }}" href="javascript:void(0)" onclick="approveComment('{{ c.base36id }}')"><i class="fas fa-clipboard-check"></i>Approve</a>
                         {% endif %}
                         {% endif %}
                         {% endif %}
                         
                     </div>
                 </div>
+            </li>
+            <li class="list-inlie-item d-inline-block d-md-none">
+                <a data-toggle="modal" data-target="#actionsModal-{{ c.base36id }}"><i class="fas fa-ellipsis-h"></i></a>
             </li>
              <li id="comment-{{ c.base36id }}-up" class="list-inline-item arrow-up d-inline-block d-md-none mr-2" {% if voted==1 %}onclick="vote_comment('{{ c.base36id }}','0')"{% elif voted > -2 %}onclick="vote_comment('{{ c.base36id }}','1')"{% endif %}>
                     </li>
@@ -121,6 +122,43 @@
 {% endfor %}
 {% endif %}
 {% endif %}
+</div>
+
+<!-- Comment Actions Modal -->
+<div class="modal fade d-md-none" id="actionsModal-{{ c.base36id }}" tabindex="-1" role="dialog" aria-labelledby="actionsModalTitle" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+      </button>
+  </div>
+  <div class="modal-body">
+  <ul class="list-group post-actions">
+    <li class="list-group-item"><a class="dropdown-item" href="{{ c.parent.permalink }}"><i class="fas fa-dna"></i>Parent</a></li>
+    <li class="list-group-item d-none"><a href="#" class="d-block"><i class="fas fa-save"></i>Save</a></li>
+    <li class="list-group-item"><a href="#" class="d-block"><i class="fas fa-flag"></i>Flag</a></li>
+
+
+
+                           <li class="list-group-item"><a class="d-block id="distinguish-{{ c.base36id }}" href="javascript:void(0)" onclick="undistinguish{% if v.admin_level>=4 %}Admin{% else %}Mod{% endif %}Comment('{{ c.base36id }}')"><i class="fas fa-id-badge"></i>Undistinguish</a></li>
+                        {% else %}
+                        <li class="list-group-item"><a class="d-block" id="distinguish-{{ c.base36id }}" href="javascript:void(0)" onclick="distinguish{% if v.admin_level>=4 %}Admin{% else %}Mod{% endif %}Comment('{{ c.base36id }}')"><i class="fas fa-id-badge"></i>Distinguish</a></li>
+
+                        {% endif %}
+                        {% endif %}
+                        {% if v.admin_level>=1 and v.admin_level > c.author.admin_level %}
+                        {% if not c.is_banned %}
+                        <li class="list-group-item"><a class="d-block" id="moderate-{{ c.base36id }}" href="javascript:void(0)" onclick="removeComment('{{ c.base36id }}')"><i class="fas fa-trash-alt"></i>Remove</a></li>
+                        {% else %}
+                        <li class="list-group-item"><a class="d-block" id="moderate-{{ c.base36id }}" href="javascript:void(0)" onclick="approveComment('{{ c.base36id }}')"><i class="fas fa-clipboard-check"></i>Approve</a></li>
+                        {% endif %}
+                        {% endif %}
+                        {% endif %}
+  </ul>
+</div>
+</div>
+</div>
 </div>
 
 </div>
