--- a/ruqqus/templates/single_comment.html
+++ b/ruqqus/templates/single_comment.html
@@ -88,7 +88,7 @@
                     </div>
                 </div>
             </li>
-            <li class="list-inlie-item d-inline-block d-md-none">
+            <li class="list-inline-item d-inline-block d-md-none">
                 <a data-toggle="modal" data-target="#actionsModal-{{ c.base36id }}"><i class="fas fa-ellipsis-h"></i></a>
             </li>
             <li id="comment-{{ c.base36id }}-up" class="list-inline-item arrow-up d-inline-block d-md-none mr-2" {% if voted==1 %}onclick="vote_comment('{{ c.base36id }}','0')"{% elif voted > -2 %}onclick="vote_comment('{{ c.base36id }}','1')"{% endif %}>
@@ -135,7 +135,7 @@
   <div class="modal-body">
       <ul class="list-group post-actions">
         <li class="list-group-item"><a class="d-block copy-link" href="javascript:void(0);" role="button" data-clipboard-text="https://www.ruqqus.com{{ c.permalink }}"><i class="fas fa-link"></i><span>Share</span></a></li>
-        <li class="list-group-item"><a class="dropdown-item" href="{{ c.parent.permalink }}"><i class="fas fa-dna"></i>Parent</a></li>
+        <li class="list-group-item"><a class="d-block" href="{{ c.parent.permalink }}"><i class="fas fa-dna"></i>Parent</a></li>
         <li class="list-group-item d-none"><a href="#" class="d-block"><i class="fas fa-save"></i>Save</a></li>
         <li class="list-group-item"><a href="#" class="d-block"><i class="fas fa-flag"></i>Flag</a></li>
 
