--- a/ruqqus/templates/single_comment.html
+++ b/ruqqus/templates/single_comment.html
@@ -134,7 +134,7 @@
   </div>
   <div class="modal-body">
       <ul class="list-group post-actions">
-        <li class="list-group-item"><a class="d-block copy-link" href="javascript:void(0);" role="button" data-clipboard-text="https://www.ruqqus.com{{ c.permalink }}"><i class="fas fa-link"></i><span>Share</span></a></li>
+        <li class="list-group-item"><a href="javascript:void(0);" role="button" class="copy-link" data-clipboard-text="https://www.ruqqus.com{{ c.permalink }}"><i class="fas fa-link"></i><span>Share</span></a>
         <li class="list-group-item"><a class="d-block" href="{{ c.parent.permalink }}"><i class="fas fa-dna"></i>Parent</a></li>
         <li class="list-group-item d-none"><a href="#" class="d-block"><i class="fas fa-save"></i>Save</a></li>
         <li class="list-group-item"><a href="#" class="d-block"><i class="fas fa-flag"></i>Flag</a></li>
