--- a/ruqqus/assets/style/main.css
+++ b/ruqqus/assets/style/main.css
@@ -13164,6 +13164,10 @@ a.bg-dark:hover, a.bg-dark:focus, button.bg-dark:hover, button.bg-dark:focus {
   margin-bottom: 0;
 }
 
+.modal .post-actions .list-group-item {
+  border: none;
+}
+
 .post-actions {
   position: relative;
   color: #7D7D7D;
