--- a/ruqqus/assets/style/main.scss
+++ b/ruqqus/assets/style/main.scss
@@ -1135,6 +1135,10 @@ a.bg-dark:hover, a.bg-dark:focus, button.bg-dark:hover, button.bg-dark:focus {
     border: none;
 }
 
+.modal .post-actions .list-group-item:focus, .modal .post-actions .list-group-item:hover {
+    background-color: $gray-200;
+}
+
 .post-actions {
     position: relative;
     color: $text-muted;
@@ -1334,6 +1338,16 @@ a.bg-dark:hover, a.bg-dark:focus, button.bg-dark:hover, button.bg-dark:focus {
 .comment .comment-body p.text {
     margin-bottom: 1rem;
     word-break: break-word;
+}
+
+// Modal Comment Actions
+
+.modal .comment-actions .list-group-item {
+    border: none;
+}
+
+.modal .comment-actions .list-group-item:focus, .modal .comment-actions .list-group-item:hover {
+    background-color: $gray-200;
 }
 
 .comment-actions {
