fa icon replacing html times sign

--- a/ruqqus/templates/single_comment.html
+++ b/ruqqus/templates/single_comment.html
@@ -128,7 +128,7 @@
   <div class="modal-dialog modal-dialog-centered" role="document">
     <div class="modal-content">
 <button type="button" class="close position-absolute p-3" data-dismiss="modal" aria-label="Close" style="right: 0; z-index: 10;">
-          <span aria-hidden="true">×</span>
+          <span aria-hidden="true"><i class="far fa-times"></i></span>
       </button>
   <div class="modal-body">
       <ul class="list-group comment-actions">
