--- a/ruqqus/templates/submission.html
+++ b/ruqqus/templates/submission.html
@@ -58,11 +58,9 @@
 <div class="modal fade d-md-none" id="actionsModal" tabindex="-1" role="dialog" aria-labelledby="actionsModalTitle" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered" role="document">
     <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
+      <button type="button" class="close position-absolute p-3" data-dismiss="modal" aria-label="Close" style="right: 0; z-index: 10;">
+          <span aria-hidden="true"><i class="far fa-times"></i></span>
       </button>
-  </div>
   <div class="modal-body">
   <ul class="list-group post-actions">
       <li class="list-group-item d-none"><a href="#" class="d-block"><i class="fas fa-save"></i>Save</a></li>
