--- a/ruqqus/templates/userpage.html
+++ b/ruqqus/templates/userpage.html
@@ -228,8 +228,8 @@
       {% if v and v.id == u.id %}
 
       <div class="mb-3">
-    <a href="/submit" class="btn btn-primary btn-sm mr-2"><i class="far fa-feather-alt mr-2"></i>Create post</a>
-    <a href="/settings/profile#bio" class="btn btn-outline-gray btn-sm"><i class="far fa-user-edit mr-2"></i>Edit profile</a>
+    <a href="/submit" class="btn btn-primary btn-sm mr-2"><i class="fas fa-feather-alt mr-2"></i>Create post</a>
+    <a href="/settings/profile#bio" class="btn btn-outline-gray btn-sm"><i class="fas fa-user-edit mr-2"></i>Edit profile</a>
     </div>
 
       {% endif %} 
