--- a/ruqqus/templates/userpage.html
+++ b/ruqqus/templates/userpage.html
@@ -62,7 +62,7 @@
   </a>
 
   <div class="dropdown-menu dropdown-menu-right border-0 shadow" aria-labelledby="dropdownMoreLink">
-    <a class="dropdown-item" href="/settings/profile#bio"><i class="fas fa-user-edit"></i>Edit profile</a>
+    <a class="dropdown-item" href="/settings/profile#bio"><i class="fas fa-edit"></i>Edit profile</a>
     <a class="dropdown-item" href="/settings/security"><i class="fas fa-cog"></i>Account details</a>
   </div>
 </div>
@@ -228,7 +228,7 @@
     {% if v and v.id == u.id %}
 
     <div class="mb-3">
-      <a href="/settings/profile#bio" class="btn btn-outline-gray btn-sm"><i class="fas fa-user-edit mr-2"></i>Edit profile</a>
+    <a href="/settings/profile#bio" class="btn btn-outline-gray btn-sm"><i class="fas fa-pen mr-2"></i>Edit profile</a>
     </div>
 
     {% endif %} 
