--- a/ruqqus/assets/style/main.scss
+++ b/ruqqus/assets/style/main.scss
@@ -713,7 +713,7 @@ label.terms {
 }
 
 .sidebar-section .fa, .sidebar-section .fas {
-    font-size: $small-font-size;
+    font-size: $extra-small-font-size;
 }
 
 .icon::before {
