--- a/ruqqus/templates/userpage.html
+++ b/ruqqus/templates/userpage.html
@@ -228,7 +228,7 @@
     {% if v and v.id == u.id %}
 
     <div class="mb-3">
-    <a href="/settings/profile#bio" class="btn btn-outline-gray btn-sm"><i class="fas fa-pen mr-2"></i>Edit profile</a>
+    <a href="/settings/profile#bio" class="btn btn-secondary btn-sm"><i class="fas fa-pen mr-2"></i>Edit profile</a>
     </div>
 
     {% endif %} 
