--- a/ruqqus/templates/authforms.html
+++ b/ruqqus/templates/authforms.html
@@ -72,7 +72,7 @@
 
 			{% if error %}
 				<div class="alert alert-danger alert-dismissible fade show d-flex my-3" role="alert">
-                          <i class="fas fa-exclamation-circle text-lg my-auto"></i>
+                          <i class="fas fa-exclamation-circle my-auto"></i>
                           <div>
                           {{ error }}
                           </div>
@@ -83,7 +83,7 @@
 			{% endif %}
 			{% if msg %}
 				<div class="alert alert-success alert-dismissible fade show d-flex my-3" role="alert">
-                          <i class="fas fa-info-circle text-lg my-auto" aria-hidden="true"></i>
+                          <i class="fas fa-info-circle my-auto" aria-hidden="true"></i>
                           <div>
                           {{ msg }}
                           </div>
