--- a/ruqqus/templates/authforms.html
+++ b/ruqqus/templates/authforms.html
@@ -77,7 +77,7 @@
                           {{ error }}
                           </div>
                           <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                            <span aria-hidden="true">&times;</span>
+                            <span aria-hidden="true"><i class="far fa-times"></i></span>
                         </button>
                 </div>
 			{% endif %}
@@ -88,7 +88,7 @@
                           {{ msg }}
                           </div>
                           <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                            <span aria-hidden="true">&times;</span>
+                            <span aria-hidden="true"><i class="far fa-times"></i></span>
                         </button>
                 </div>
 			{% endif %}
