--- a/ruqqus/templates/login.html
+++ b/ruqqus/templates/login.html
@@ -74,7 +74,7 @@
 
                         {% if failed %}
                         <div class="alert alert-danger alert-dismissible fade show d-flex my-3" role="alert">
-                          <i class="fas fa-exclamation-circle text-lg my-auto"></i>
+                          <i class="fas fa-exclamation-circle my-auto"></i>
                           <div>
                           Incorrect username or password.
                           <br>
@@ -100,7 +100,7 @@
 
                         <small><a href="/forgot">Forgot password?</a></small>
 
-                        <input class="btn btn-primary login w-100 mt-3" type="submit" value="Sign in">
+                        <button class="btn btn-primary login w-100 mt-3" id="login_button" type="submit">Sign in</button>
 
                         <div class="text-center mt-5 mb-3">
                             <a href="/signup" class="text-muted text-small toggle-login">Don't have an
@@ -149,6 +149,10 @@ crossorigin="anonymous"></script>
 <!-- Initialize BS 4 tool tips -->
 
 <script src="/assets/js/tooltips.js"></script>
+
+<!-- BS Spinner JS -->
+
+<script src="/assets/js/spinner.js"></script>
 
 </body>
 
