--- a/ruqqus/templates/login.html
+++ b/ruqqus/templates/login.html
@@ -100,7 +100,7 @@
 
                         <small><a href="/forgot">Forgot password?</a></small>
 
-                        <button class="btn btn-primary login w-100 mt-3" id="login_button" type="submit">Sign in</button>
+                        <button class="btn btn-primary login w-100 mt-3" id="login_button">Sign in</button>
 
                         <div class="text-center mt-5 mb-3">
                             <a href="/signup" class="text-muted text-small toggle-login">Don't have an
