login form on submit

--- a/ruqqus/templates/login.html
+++ b/ruqqus/templates/login.html
@@ -86,7 +86,7 @@
                     </div>
                     {% endif %}
 
-                    <form action="/login" method="post" class="mt-3">
+                    <form action="/login" method="post" class="mt-3" id="login-form">
 
                         <label for="username" class="mt-3">Email Address</label>
 
