spinner added to register and create post forms

--- a/ruqqus/templates/login.html
+++ b/ruqqus/templates/login.html
@@ -86,7 +86,7 @@
                     </div>
                     {% endif %}
 
-                    <form action="/login" method="post" class="mt-3" id="login_form">
+                    <form action="/login" method="post" class="mt-3" id="login">
 
                         <label for="username" class="mt-3">Email Address</label>
 
