--- a/ruqqus/templates/submit.html
+++ b/ruqqus/templates/submit.html
@@ -129,7 +129,7 @@
                                         </p>
                                         {% endif %}
 
-                                            <input class="btn btn-primary ml-auto" type="submit" value="Create post">
+                                            <button class="btn btn-primary ml-auto" id="create_button">Create post</button>
 
                                         </div>
 
@@ -188,6 +188,10 @@
 <!-- Search bar icon JS -->
 
 <script src="/assets/js/search_icon.js"></script>
+
+<!-- BS Spinner JS -->
+
+<script src="/assets/js/spinner.js"></script>
 
 </body>
 
