--- a/ruqqus/templates/sign_up.html
+++ b/ruqqus/templates/sign_up.html
@@ -72,7 +72,7 @@
 
                             <h1 class="h3 font-weight-normal text-center mb-5">Create your account.</h1>
 
-                            <form action="/signup" method="post" class="mt-3">
+                            <form action="/signup" method="post" class="mt-3" id="signup">
 
 				<span class="text-danger">{{ error }}</span><br>
 
@@ -116,7 +116,7 @@
                                             href="/terms">terms and conditions</a></label>
                                 </div>
 
-                                <input class="btn btn-primary login w-100 mt-3" type="submit" value="Register">
+                                <button class="btn btn-primary login w-100 mt-3" id="register_button">Register</button>
 
                                 <div class="text-center mt-5 mb-3">
                                     <a href="/login" class="text-muted text-small toggle-login">Already have an
