--- a/ruqqus/templates/about/rules.html
+++ b/ruqqus/templates/about/rules.html
@@ -29,6 +29,7 @@ You may not upload to, embed within, or link out from Ruqqus:
 * Harassment of other users, either online or offline
 * Impersonation of Ruqqus administrators or other users.
 * Personal information of yourself or other users
+* URL shorteners and anything else that disguises the true destination of a link
 * Pornographic material
 * Sexual or sexually suggestive material not marked "NSFW"
 * Sexual or sexually suggestive material involving individuals under the age of 18
