--- a/ruqqus/templates/default.html
+++ b/ruqqus/templates/default.html
@@ -69,7 +69,7 @@
   <div class="container">
     <div class="row justify-content-around">
 
-      <div class="col bg-white shadow-sm rounded-md h-100 custom-gutters">
+      <div class="col bg-white shadow-sm shadow-sm-0 rounded-md h-100 custom-gutters">
 
         {% block PseudoSubmitForm %}
         {% endblock %}
