--- a/ruqqus/templates/settings_profile.html
+++ b/ruqqus/templates/settings_profile.html
@@ -164,7 +164,7 @@
 
                     <div class="w-lg-75">
                         <div class="input-group mb-2">
-                            <textarea class="form-control" id="bio" aria-label="With textarea"
+                            <textarea class="form-control rounded" id="bio" aria-label="With textarea"
                             placeholder="Tell the Ruqqus community a bit about yourself."
                             rows="3" name="bio" form="profile-settings">{{ v.bio }}</textarea>
                         </div>
