--- a/ruqqus/assets/style/main.css
+++ b/ruqqus/assets/style/main.css
@@ -14518,6 +14518,10 @@ pre .clo, pre .opn, pre .pun, code .clo, code .opn, code .pun {
     padding-top: 49px;
   }
 
+  .shadow-sm-0 {
+    box-shadow: none;
+  }
+
   .navbar-nav {
     height: 100vh;
   }
