--- a/ruqqus/templates/default.html
+++ b/ruqqus/templates/default.html
@@ -189,6 +189,9 @@
 {% block actionsModal %}
 {% endblock %}
 
+{% block loginModal %}
+{% endblock %}
+
 <footer class="footer py-5 d-none d-md-block">
   <div class="container-fluid">
     <div class="row justify-content-center">
