--- a/ruqqus/templates/default.html
+++ b/ruqqus/templates/default.html
@@ -256,6 +256,10 @@
 
 <script src="/assets/js/search_icon.js"></script>
 
+<!-- BS Spinner JS -->
+
+<script src="/assets/js/spinner.js"></script>
+
 </body>
 
 </html>
