--- a/ruqqus/templates/submission.html
+++ b/ruqqus/templates/submission.html
@@ -62,19 +62,83 @@
         <span aria-hidden="true"><i class="far fa-times"></i></span>
       </button>
       <div class="modal-body">
-        <ul class="list-group post-actions">
-          <li class="list-group-item d-none"><a href="#" class="d-block"><i class="fas fa-save"></i>Save</a></li>
-          <li class="list-group-item"><a href="#" class="d-block"><i class="fas fa-flag"></i>Flag</a></li>
-          {% if v %}
-          {% if v.admin_level >=1 %}
-          {% if p.is_banned %}
-          <li class="list-group-item"><a class="d-block" id="moderate-post-{{ p.base36id }}" href="javascript:void(0)" onclick="approvePost('{{ p.base36id }}')"><i class="fas fa-clipboard-check"></i>Approve</a></li>
-          {% else %}
-          <li class="list-group-item"><a class="d-block" id="moderate-post-{{ p.base36id }}" href="javascript:void(0)" onclick="removePost('{{ p.base36id }}')"><i class="fas fa-trash-alt"></i>Remove</a></li>
-          {% endif %}
-          {% endif %}
-          {% endif %}
-        </ul>
+          <div class="row no-gutters h-100">
+
+        <div class="col-12 col-md-6 my-auto p-3">
+
+            <div class="row justify-content-center">
+
+                <div class="col-10 col-md-7">
+
+                    <div class="text-center mb-5">
+                        <a href="/" class="text-decoration-none"><span class="h3 text-primary">ruqqus</span></a>
+                    </div>
+
+                    <div id="login-form" class="">
+
+                        <h1 class="h3 font-weight-normal text-center mb-5">Welcome back.</h1>
+
+                        {% if failed %}
+                        <div class="alert alert-danger alert-dismissible fade show d-flex my-3" role="alert">
+                          <i class="fas fa-exclamation-circle my-auto"></i>
+                          <div>
+                          Incorrect username or password.
+                          <br>
+                          <a href="/forgot" class="alert-link">Forgot password?</a>
+                          </div>
+                          <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    {% endif %}
+
+                    <form action="/login" method="post" class="mt-3" id="login">
+
+                        <label for="username" class="mt-3">Email Address</label>
+
+                        <input class="form-control" id="username" aria-describedby="usernameHelp"
+                        type="text" name="username" required="">
+
+                        <label for="password" class="mt-3">Password</label>
+
+                        <input class="form-control" id="password" aria-describedby="passwordHelp"
+                        type="password" name="password" required="">
+
+                        <small><a href="/forgot">Forgot password?</a></small>
+
+                        <button class="btn btn-primary login w-100 mt-3" id="login_button">Sign in</button>
+
+                        <div class="text-center mt-5 mb-3">
+                            <a href="/signup" class="text-muted text-small toggle-login">Don't have an
+                                account? Create one today!</a>
+                            </div>
+
+                        </form>
+
+                    </div>
+
+                </div>
+
+            </div>
+
+        </div>
+
+        <div class="col-12 col-md-6 d-none d-md-block">
+
+            <div class="splash-wrapper">
+
+                <div class="splash-overlay"></div>
+
+                <h6 class="splash-text">
+                    {{ i.text }}
+                </h6>
+
+                <img class="splash-img" src="{{ i.path }}"></img>
+            </div>
+
+        </div>
+
+    </div>
       </div>
     </div>
   </div>
