shadow-sm-0 important

--- a/ruqqus/assets/style/main.css
+++ b/ruqqus/assets/style/main.css
@@ -14519,7 +14519,7 @@ pre .clo, pre .opn, pre .pun, code .clo, code .opn, code .pun {
   }
 
   .shadow-sm-0 {
-    box-shadow: none;
+    box-shadow: none !important;
   }
 
   .navbar-nav {
