--- a/ruqqus/templates/default.html
+++ b/ruqqus/templates/default.html
@@ -222,6 +222,9 @@
 {% block enlargeThumbJS %}
 {% endblock %}
 
+ {% block embedJS %}
+{% endblock %}
+
 <!-- ClipboardJS -->
 
 <script src="https://cdn.jsdelivr.net/npm/clipboard@2/dist/clipboard.min.js"></script>
