--- a/ruqqus/templates/about/about.html
+++ b/ruqqus/templates/about/about.html
@@ -25,6 +25,10 @@
   <!-- Font Awesome -->
   <link href="/assets/fontawesome/css/all.css" rel="stylesheet"> <!--load all styles -->
 
+  <!-- Code Prettify -->
+
+  <script src="https://cdn.jsdelivr.net/gh/google/code-prettify@master/loader/run_prettify.js"></script>
+
 </head>
 
 <body id="page">
