--- a/ruqqus/assets/style/main.scss
+++ b/ruqqus/assets/style/main.scss
@@ -2039,7 +2039,7 @@ pre ol > li::before {
     width: 3rem;
 }
 
-pre li.L1, li.L3, li.L5, li.L7, li.L9 {
+pre li.L1, pre li.L3, pre li.L5, pre li.L7, pre li.L9 {
     background: none;
 }
 
