--- a/ruqqus/templates/about/about.html
+++ b/ruqqus/templates/about/about.html
@@ -59,7 +59,7 @@
 
     <!-- Hero -->
 
-    <section class="py-7 py-md-8 bg-svg">
+    <section class="py-7 py-md-8 bg-primary">
         <div class="container">
             <div class="row text-center text-white text-md-left align-items-center">
                 <div class="col-12 col-md-5 col-lg-6">
@@ -1076,7 +1076,7 @@ def frontlist(sort = "hot", page = 1):
 
     <!-- CTA -->
 
-    <section class="py-7 py-md-8 bg-light">
+    <section class="py-7 py-md-8">
 
         <div class="container">
 
