--- a/ruqqus/templates/about/about.html
+++ b/ruqqus/templates/about/about.html
@@ -200,7 +200,7 @@
                         algorithms right from your browser. No biased trending or sorting manipulation on Ruqqus.
                     </p>
 
-                    <a href="#" class="btn btn-lg btn-primary d-none d-md-inline-block">View our code</a>
+                    <a href="https://github.com/ruqqus/ruqqus" class="btn btn-lg btn-primary d-none d-md-inline-block">View our code</a>
 
                 </div>
 
