--- a/ruqqus/templates/about/about.html
+++ b/ruqqus/templates/about/about.html
@@ -1179,8 +1179,12 @@ def frontlist(sort = "hot", page = 1):
     <script src="/assets/js/tooltips.js"></script>
 
     <!-- Sign up script -->
-    
+
     <script src="/assets/js/signup.js"></script>
+
+    <!-- BS Spinner JS -->
+
+    <script src="/assets/js/spinner.js"></script>
 
     <!-- AOS Animate -->
 
