removed d-none from code fa icons

--- a/ruqqus/templates/about/about.html
+++ b/ruqqus/templates/about/about.html
@@ -178,7 +178,7 @@
 
                 <div class="col-12 col-md-6">
 
-                    <ul class="list-inline no-bullets display-4 mb-3 d-none" style="opacity: .1">
+                    <ul class="list-inline no-bullets display-4 mb-3" style="opacity: .1">
                         <li class="list-inline-item mr-3">
                             <i class="fab fa-python"></i>
                         </li>
@@ -1153,7 +1153,7 @@ def frontlist(sort = "hot", page = 1):
     </section>
 
     
-    <footer class="footer py-5 d-none d-md-block">
+    <footer class="footer py-5">
     <div class="container-fluid">
       <div class="row justify-content-center">
         <div class="col">
